fixed alignements

--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -684,33 +684,33 @@
         line-height: 4rem;
     }
     .section-2-investments-block{
-        display: flex;
-        /* flex-direction: row; */
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         margin-top: 1rem;
         margin-bottom: 1rem;
         height: 8rem;
-        width: 100%;
-        gap: 0rem;
+        width: 90vw;
        
     }
     
     .section-2-investments-orange{
         display: grid;
         grid-template-rows: 1fr 1fr ;
+        margin: auto;
         background-color: #FD6824;
         height: 80%;
         border-radius: 10px;
-        width: 3rem;
+        width: 85%;
         
     }
     
     .section-2-investments-ash{
         display: grid;
+        margin: auto;
         grid-template-rows: 1fr 1fr ;
         background-color: #807a79;
         height: 80%;
-        width: 3rem;
+        width: 85%;
         border-radius: 10px;
         
     }
@@ -725,17 +725,18 @@
     }
     
     .section-2-block-up p{
-        font-size: 0.7rem;
+        font-size: 100%;
         text-align: center;
         font-weight: 500;
         color: #FFF7F2;
-        line-height: 0.7rem;
+        line-height: 100%;
+        padding: 3px;
     }
     
     .section-2-block-down p{
         text-align: center;
-        font-size: 0.4rem;
-        line-height: 0.5rem;
+        font-size: 50%;
+        line-height: 100%;
         color: #FFF7F2;
     }
 
